# verlog

./: README.md
backup/src/: CMakeLists.txt
backup/src/access/: access_obj.h  am_strategy.h  apply_writes_on_demand_am.cpp  apply_writes_on_demand_am.h  log_index_ver_chain_am.cpp  log_index_ver_chain_am.h  queryfresh_am.cpp  queryfresh_am.h  tuple_ver_chain_am.cpp  tuple_ver_chain_am.h
backup/src/benchmark/: schema.h  workload.cpp  workload.h
backup/src/communication/: comm_manager.cpp  comm_manager.h  db_comm.cpp  db_comm.h  global_ts_comm.cpp  global_ts_comm.h  log_replica_comm.cpp  log_replica_comm.h  rdma_meta.h  rdma_qp.cpp  rdma_qp.h  system_control_comm.cpp  system_control_comm.h
backup/src/executor/: apply_write_thread.cpp  apply_write_thread.h  db_thread.cpp  db_thread.h  logger_thread.cpp  logger_thread.h  reclaim_thread.cpp  reclaim_thread.h  replay_mapping.cpp  replay_mapping.h  replay_thread.cpp  replay_thread.h  replicate_thread.cpp  replicate_thread.h  thread_manager.cpp  thread_manager.h  txn_thread.cpp  txn_thread.h  workload_thread.cpp  workload_thread.h
backup/src/log/: log_buffer.cpp  log_buffer.h  log_manager.cpp  log_manager.h  log_reclaim_context.cpp  log_reclaim_context.h  log_replay_context.cpp  log_replay_context.h
backup/src/statistic/: client_statistic.cpp  client_statistic.h  execute_thread_statistic.cpp  execute_thread_statistic.h  reclaim_thread_statistic.cpp  reclaim_thread_statistic.h  replay_thread_statistic.cpp  replay_thread_statistic.h  statistic_manager.cpp  statistic_manager.h
backup/src/storage/: array_index.cpp  array_index.h  hash_index.cpp  hash_index.h  index.h  log_ptr.cpp  log_ptr.h  part_ordered_index.cpp  part_ordered_index.h  tuple.cpp  tuple.h
backup/src/system/: config.h  global.cpp  global.h  main.cpp
backup/src/transaction/: client.cpp  client.h  snapshot.cpp  snapshot.h  snapshot_manager.cpp  snapshot_manager.h  txn_context.cpp  txn_context.h  txn_id.cpp  txn_id.h
backup/src/util/: db_latch.h  db_rw_lock.cpp  db_rw_lock.h  db_spin_lock.cpp  db_spin_lock.h  util_function.cpp  util_function.h
primary/: CMakeLists.txt
primary/src/: CMakeLists.txt
primary/src/benchmark/: schema.h  workload.cpp  workload.h
primary/src/communication/: comm_manager.cpp  comm_manager.h  db_comm.h  global_ts_comm.cpp  global_ts_comm.h  log_replica_comm.cpp  log_replica_comm.h  rdma_meta.h  rdma_qp.cpp  rdma_qp.h  system_control_comm.cpp  system_control_comm.h
primary/src/executor/: db_thread.cpp  db_thread.h  load_thread.cpp  load_thread.h  logger_thread.cpp  logger_thread.h  replicate_thread.cpp  replicate_thread.h  thread_manager.cpp  thread_manager.h  txn_thread.cpp  txn_thread.h
primary/src/log/: log_buffer.cpp  log_buffer.h  log_manager.cpp  log_manager.h  txn_log.cpp  txn_log.h
primary/src/statistic/: statistic_manager.cpp  statistic_manager.h  thread_statistic.cpp  thread_statistic.h
primary/src/storage/: access_entry.cpp  access_entry.h  base_index.h  column.h  hash_index.cpp  hash_index.h  index.h  index_hash.cpp  index_hash.h  table.cpp  table.h  tuple.cpp  tuple.h
primary/src/system/: config.h  global.cpp  global.h  main.cpp
primary/src/transaction/: txn_context.cpp  (+3 more)
(+69 files in other folders)
